feat(搜索): 添加jack6249毕业设计V1.1

--- a/Co-creation-projects/jack6249-GiftGeniusAgent/.env example
+++ b/Co-creation-projects/jack6249-GiftGeniusAgent/.env example
@@ -4,3 +4,5 @@ LLM_API_KEY = "yourkey"
 LLM_BASE_URL = "yourbaseurl"
 #Tavily参数
 TAVILY_API_KEY = "yourTavilyKey"
+#百度优选MCP参数
+BAIDU_MCP_TOKEN = "yourtoken"
